// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CHECKIN RENDERING: <CheckInListView /> can be rendered 1`] = `
<View
  style={
    Object {
      "marginBottom": 52.325581395348834,
    }
  }
/>
`;

exports[`CHECKIN RENDERING: <CheckInWelcomeText /> can be rendered 1`] = `
<View
  style={
    Object {
      "marginBottom": 43.604651162790695,
      "marginLeft": 52.325581395348834,
      "marginRight": 52.325581395348834,
    }
  }
/>
`;
